crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/abstract_library/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 9571] Error: Libraries cannot be abstract.
   ╭─[input.sol:7:1]
   │
 7 │ abstract library L {}
   │ ──────────┬──────────  
   │           ╰──────────── Error occurred here.
───╯
